--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 <br><br>
 
 <!-- A file to drag to the dropArea -->
-<input type="file" id="upload_file" accept="audio/*" style="display:block" multiple>
+<input type="file" id="upload_file" accept="audio/*" style="display:block" class="dropArea" multiple>
 
 <br><br>
 
