--- a/index2.html
+++ b/index2.html
@@ -156,9 +156,10 @@ async function previewInput(event) {
 	
 	for (var i=0; i<allFiles.length; i++) {
 		var file = allFiles[i];
-		var reader = new FileReader();
+		
+		(file) => { var reader = new FileReader();
 		reader.onload = async function(e){ obj[file.name] =  e.target.result; };
-		reader.readAsDataURL(file);
+		reader.readAsDataURL(file); }
 	}
 
 	// ---------------------
