--- a/index2.html
+++ b/index2.html
@@ -155,13 +155,26 @@ async function previewInput(event) {
 	// console.log("allFiles :", allFiles);
 	
 	for (var i=0; i<allFiles.length; i++) {
-		const reader = new FileReader();
-		reader.onload = async function(e){ obj[allFiles[i].name] =  e.target.result; };
-		reader.readAsDataURL(allFiles[i]);
+		const file = allFiles[i];
+		console.log("file :", file);
+		await obtain_fileInfo(file)
+			.then(res => { console.log('a file saved to obj: ', Object.keys(obj)); })
+		
 	}
 
 	// ---------------------
 }
+
+async function obtain_fileInfo(file) {
+	return new Promise((resolve, reject) => {
+		const reader = new FileReader();
+		reader.onload = async function(e){ 
+			obj[file.name] =  e.target.result; 
+		};
+		reader.readAsDataURL(file);
+	});
+}
+	
 
 // ----------------------------------------------------
 
