--- a/index2.html
+++ b/index2.html
@@ -152,7 +152,7 @@ async function previewInput(event) {
 
 	// For multiple files
 	const allFiles = event.target.files;
-	// console.log("allFiles :", allFiles);
+	console.log("allFiles :", allFiles);
 	
 	for (var i=0; i<allFiles.length; i++) {
 		const file = allFiles[i];
