--- a/index2.html
+++ b/index2.html
@@ -164,7 +164,9 @@ async function previewInput(event) {
 		const file = allFiles[i];
 		console.log("file :", file);
 		
-		await obtain_fileInfo(file).then(res => { console.log('a file saved to obj: ', Object.keys(obj)); });
+		await obtain_fileInfo_way1(file)
+			.then(base64str => { obj[file.name] = base64str; })
+			.catch(error => console.error(error));
 		
 		i = i + 1;
 		console.log("i :", i);
@@ -174,16 +176,30 @@ async function previewInput(event) {
 }
 
 async function obtain_fileInfo(file) {
-	console.log('here');
-	return new Promise((resolve, reject) => {
+	return await new Promise((resolve) => {
 		const reader = new FileReader();
 		reader.onload = async function(e){ 
-			obj[file.name] =  e.target.result; 
+			obj[file.name] =  e.target.result;
+			resolve('promise resolved');
 		};
 		reader.readAsDataURL(file);
 	});
+	 
 }
 	
+async function obtain_fileInfo_way1(file) {
+	
+	var base64_string = await new Promise((resolve) => {
+		const reader = new FileReader();
+		reader.onload = async function(e){ 
+			resolve(e.target.result);
+			// OR
+			// resolve(reader.result);
+		};
+		reader.readAsDataURL(file);
+	});
+	 return base64_string;
+}
 
 // ----------------------------------------------------
 
