--- a/example.html
+++ b/example.html
@@ -17,15 +17,15 @@
 	
 <br><br>
 
+<div id="dropArea" class="dropArea"> Drop for Example 0 & 1</div>
+
+<br><hr><br>
+
 <h1>Example 2: Drag and drop files</h1>
 <input type="file" id="upload_file_dragdrop" style="display:block" class="dropArea1" multiple>
 
-<br><hr><br>
-  
-<div id="dropArea" class="dropArea">Drop to Upload</div>
-
 <br><br>
-	
+
 <button id="use_moved_data" onclick="use_moved_data()">use_moved_data</button>
   
 <!-- ---------------------------------------- -->
